build_error.txt

> garage@0.0.0 build
> vite build

[36mvite v8.0.0 [32mbuilding client environment for production...[36m[39m
[2K
transforming...Γ£ô 1831 modules transformed.
cmd : [31mΓ£ù[39m Build failed in 685ms
At line:1 char:1
+ cmd /c npm run build 2>&1 | Out-File -FilePath "build_error.txt" -Enc ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ([31mΓ£ù[39m Build failed in 685ms:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid token in pseudo element: WhiteSpace(" ")
1123 |  }
1124 |  
1125 |    font-weight: 500;
     |                 ^
1126 |  }
1127 |  
    at Module.<anonymous> (C:\Users\hp\Downloads\GARAGE\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/chunks/node.js:21170:59)
    at async finalizeCss (file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/chunks/node.js:21016:36)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/chunks/node.js:2437:22)
    at async PluginContextImpl.renderChunk 
(file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/chunks/node.js:20555:19)
    at async plugin 
(file:///C:/Users/hp/Downloads/GARAGE/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1211:16)
    at async plugin.<computed> (file:///C:/Users/hp/Downloads/GARAGE/node_modules/rolldown/dist/shared/bindingify-input
-options-Cu7pt6SZ.mjs:1570:12)[31m
    at aggregateBindingErrorsIntoJsError 
(file:///C:/Users/hp/Downloads/GARAGE/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:48:18)
    at unwrapBindingResult 
(file:///C:/Users/hp/Downloads/GARAGE/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:18:128)
    at #build 
(file:///C:/Users/hp/Downloads/GARAGE/node_modules/rolldown/dist/shared/rolldown-build-4YnQkA76.mjs:3311:34)
    at async buildEnvironment 
(file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/chunks/node.js:32794:64)
    at async Object.build (file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/chunks/node.js:33216:19)
    at async Object.buildApp 
(file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/chunks/node.js:33213:153)
    at async CAC.<anonymous> (file:///C:/Users/hp/Downloads/GARAGE/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
